# guitar-hero-mod

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  world-tour-guitar-HID-descriptor.md
main_project/: .nvim-workspace.lua  CMakeLists.txt  program.sh
main_project/.nvim-workspace/: workspace.lua
main_project/libs/: CMakeLists.txt
main_project/libs/bt/: CMakeLists.txt
main_project/libs/bt/bt_config/include/: btstack_config.h
main_project/libs/bt/bt_init/: CMakeLists.txt
main_project/libs/bt/bt_init/include/: bt_init.hpp  hid_stuff.h
main_project/libs/bt/bt_init/src/: bt_init.cpp
main_project/libs/bt/bt_reconnect/: CMakeLists.txt
main_project/libs/bt/bt_reconnect/include/: bt_reconnect.hpp
main_project/libs/bt/bt_reconnect/src/: bt_reconnect.cpp
main_project/libs/bt/btstack_helpers/: CMakeLists.txt
main_project/libs/bt/btstack_helpers/include/: timer.hpp
main_project/libs/bt/btstack_helpers/src/: timer.cpp
main_project/libs/bt/include/: bt.hpp  hid_stuff.h
main_project/libs/bt/src/: bt.cpp
main_project/libs/bt_config/: CMakeLists.txt
main_project/libs/buttons/: CMakeLists.txt
main_project/libs/buttons/include/: buttons.hpp
main_project/libs/buttons/src/: buttons.cpp
main_project/libs/parray/: CMakeLists.txt
main_project/libs/parray/include/: parray.hpp
main_project/libs/pubsub/: CMakeLists.txt
main_project/libs/pubsub/include/: pubsub.hpp  topics.hpp
main_project/libs/sg14/: CMakeLists.txt
main_project/libs/sg14/include/: inplace_function.hpp
main_project/libs/shutdown/: CMakeLists.txt
main_project/libs/shutdown/include/: shutdown.hpp
main_project/libs/shutdown/src/: shutdown.cpp
main_project/src/: main.cpp
schematics/custom_footprints.pretty/: Choc_V1_sunken.kicad_mod
schematics/fret_board/: fp-lib-table  fret_board.kicad_pcb  fret_board.kicad_prl  fret_board.kicad_pro  fret_board.kicad_sch  sym-lib-table
schematics/motherboard/: fp-lib-table  motherboard.kicad_pcb  motherboard.kicad_prl  motherboard.kicad_pro  motherboard.kicad_sch
schematics/strum_bar/: strum_bar.kicad_pcb  strum_bar.kicad_prl  strum_bar.kicad_pro  strum_bar.kicad_sch
simpler_main_project/: CMakeLists.txt
simpler_main_project/.nvim-workspace/: debugging.lua  workspace.lua
simpler_main_project/include/: battery.hpp  bt.hpp  btstack_config.h  buttons.hpp  hid.hpp  shutdown.hpp  utils.hpp
simpler_main_project/src/: battery.cpp  bt.cpp  buttons.cpp  hid.cpp  hog_mouse_demo.c  kitara.gatt  main.c  main.cpp  shutdown.cpp
tests/bluetooth_hid_test/: CMakeLists.txt  program.sh
tests/bluetooth_hid_test/include/: bluetooth_hid_test.gatt
tests/bluetooth_hid_test/src/: main.cpp
tests/fret_button_read_test/: CMakeLists.txt  program.sh
tests/fret_button_read_test/src/: main.cpp
tests/gamepad_hid_test/: CMakeLists.txt  flash_erase.sh  program.sh
tests/gamepad_hid_test/.nvim-workspace/: workspace.lua
tests/gamepad_hid_test/include/: hid_stuff.h
tests/gamepad_hid_test/src/: main.cpp
tests/guitar_hid_test/: .nvim-workspace.lua  CMakeLists.txt  program.sh
tests/guitar_hid_test/.nvim-workspace/: workspace.lua
tests/guitar_hid_test/include/: hid_stuff.h
tests/guitar_hid_test/src/: main.cpp
tests/pico_sleep/: CMakeLists.txt  program.sh
tests/pico_sleep/src/: main.cpp
